--- a/manifest.json
+++ b/manifest.json
@@ -2,51 +2,10 @@
   {
     "guid": "afe1de9c-63e4-4692-8d8c-7c964df19eb2",
     "name": "Theme Songs",
-    "description": "Automatically downloads theme songs for TV series from various providers",
-    "overview": "Downloads theme songs from Plex and TelevisionTunes providers with configurable priorities and audio normalization",
-    "owner": "TOomaAh",
+    "description": "Automatically downloads theme songs for TV series. Forked from TOomaAh, originally by DanielAdov.",
+    "overview": "Downloads theme songs from various providers with configurable priorities, custom save paths, and audio normalization. Maintained by geejayjay.",
+    "owner": "geejayjay (Maintained)",
     "category": "Metadata",
-    "versions": [
-      {
-        "version": "10.10.0.5",
-        "changelog": "See release notes",
-        "targetAbi": "10.10.0.0",
-        "sourceUrl": "https://github.com/TOomaAh/jellyfin-plugin-themesongs/releases/download/v10.10.0.5/jellyfin-plugin-themesongs-v10.10.0.5.zip",
-        "checksum": "d6ab283cfbf9839b0052bf43372b39e6",
-        "timestamp": "2025-11-24T17:14:24Z"
-      },
-      {
-        "version": "10.10.0.4",
-        "changelog": "See release notes",
-        "targetAbi": "10.10.0.0",
-        "sourceUrl": "https://github.com/TOomaAh/jellyfin-plugin-themesongs/releases/download/v10.10.0.4/jellyfin-plugin-themesongs-v10.10.0.4.zip",
-        "checksum": "9b75ad4a2648ea6c861a70b1207d09c2",
-        "timestamp": "2025-10-12T13:05:23Z"
-      },
-      {
-        "version": "10.10.0.3",
-        "changelog": "See release notes",
-        "targetAbi": "10.10.0.0",
-        "sourceUrl": "https://github.com/TOomaAh/jellyfin-plugin-themesongs/releases/download/v10.10.0.3/jellyfin-plugin-themesongs-v10.10.0.3.zip",
-        "checksum": "66000ea0d14f9e7e262e9a5788d664c6",
-        "timestamp": "2025-10-12T11:40:27Z"
-      },
-      {
-        "version": "10.10.0.2",
-        "changelog": "See release notes",
-        "targetAbi": "10.10.0.0",
-        "sourceUrl": "https://github.com/TOomaAh/jellyfin-plugin-themesongs/releases/download/v10.10.0.2/jellyfin-plugin-themesongs-v10.10.0.2.zip",
-        "checksum": "44b604eb97592af4a3c1b007a55ed5f7",
-        "timestamp": "2025-10-11T22:23:42Z"
-      },
-      {
-        "version": "10.10.0.1",
-        "changelog": "See release notes",
-        "targetAbi": "10.10.0.0",
-        "sourceUrl": "https://github.com/TOomaAh/jellyfin-plugin-themesongs/releases/download/v10.10.0.1/jellyfin-plugin-themesongs-v10.10.0.1.zip",
-        "checksum": "f92db36e26d8f44fe8cda9920b546e1b",
-        "timestamp": "2025-10-11T22:07:25Z"
-      }
-    ]
+    "versions": []
   }
 ]
